--- a/CSS/Gallery.css
+++ b/CSS/Gallery.css
@@ -3,7 +3,7 @@
 }
 
 .genpodryad-img {
-  background: url("../Image/Genpodryad/Genpodryad0.jpg") 0 0 no-repeat;
+  background: url("../Images/Genpodryad/Genpodryad0.jpg") 0 0 no-repeat;
   background-size: 100%;
   margin-top: -30px;
 }
@@ -28,7 +28,7 @@
 }
 
 .geodetic-img {
-  background: url("../Image/Geodez/Geodez0.jpg") 0 0 no-repeat;
+  background: url("../Images/Geodez/Geodez0.jpg") 0 0 no-repeat;
   background-size: 100%;
   margin-top: -30px;
 }
@@ -53,7 +53,7 @@
 }
 
 .hilti-img {
-  background: url("../Image/Hilti/Hilti0.jpg") 0 0 no-repeat;
+  background: url("../Images/Hilti/Hilti0.jpg") 0 0 no-repeat;
   background-size: 100%;
   margin-top: -30px;
 }
@@ -82,7 +82,7 @@
 }
 
 .Innovation-img {
-  background: url("../Image/Innovation/Innov0.jpg") 0 0 no-repeat;
+  background: url("../Images/Innovation/Innov0.jpg") 0 0 no-repeat;
   background-size: 100%;
   margin-top: -30px;
 }
@@ -110,7 +110,7 @@
 }
 
 .laborotory-img {
-  background: url("../Image/Laborotory/Laborotory0.jpg") 0 0 no-repeat;
+  background: url("../Images/Laborotory/Laborotory0.jpg") 0 0 no-repeat;
   background-size: 100%;
   margin-top: -60px;
 }
@@ -135,7 +135,7 @@
 }
 
 .projects-img {
-  background: url("../Image/VogSlide1.jpeg") 0 0 no-repeat;
+  background: url("../Images/VogSlide1.jpeg") 0 0 no-repeat;
   background-size: 100%;
   margin-top: -30px;
 }
@@ -159,7 +159,7 @@
 }
 
 .cover-image-attractions {
-  background: url("../images/attractions/attraction_2.jpg") 0 0 no-repeat;
+  background: url("../Images/attractions/attraction_2.jpg") 0 0 no-repeat;
   background-size: 100%;
 }
 
