--- a/CSS/Contact.css
+++ b/CSS/Contact.css
@@ -1,5 +1,5 @@
 .contact-main {
-  background: url("../Image/BorovayaSlide1.jpg") 0 0 no-repeat;
+  background: url("../Images/BorovayaSlide1.jpg") 0 0 no-repeat;
   background-size: 100%;
   height: 400px;
 }
